--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
 sdk.dir=C:\\Users\\yasin.ilhan\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\Projeler\\mobile\\flutter
+flutter.sdk=F:\\homegit\\flutter\\flutter
 flutter.buildMode=debug
