--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,12 +3,12 @@ description: An app built using Flutter for web
 
 environment:
   # You must be using Flutter >=1.5.0 or Dart >=2.3.0
-  sdk: '>=2.3.0-dev.0.1 <3.0.0'
+  sdk: '^3.3.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^0.2.0
+  google_fonts: ^6.2.0
 
 flutter:
  uses-material-design: true
